@@ -8,6 +8,7 @@ CHANGELOG RoundCube Webmail
 - Respect config when localize folder names (#1484707)
 - Applied patch for updating page title (#1484727, #1484650)
 - Applied patch to prevent from purging inbox by uberlinuxguy (#1484449)
+- Also send search request when deleting a contact (#1484620)
 - Add CSS hack for Safari
 
 2008/02/02 (thomasb)
